
 OpenSSL CHANGES
 _______________

 This is a high-level summary of the most important changes.
 For a full list of changes, see the git commit log; for example,
 https://github.com/openssl/openssl/commits/ and pick the appropriate
 release branch.

 Changes between 1.1.1 and 3.0.0 [xx XXX xxxx]

  *) The functions AES_ige_encrypt() and AES_bi_ige_encrypt() have been
     deprecated. These undocumented functions were never integrated into the EVP
     layer and implement the AES Infinite Garble Extension (IGE) mode and AES
     Bi-directional IGE mode. These modes were never formally standardised and
     usage of these functions is believed to be very small. In particular
     AES_bi_ige_encrypt() has a known bug. It accepts 2 AES keys, but only one
     is ever used. The security implications are believed to be minimal, but
     this issue was never fixed for backwards compatibility reasons. New code
     should not use these modes.
     [Matt Caswell]

  *) Add prediction resistance to the DRBG reseeding process.
     [Paul Dale]

  *) Limit the number of blocks in a data unit for AES-XTS to 2^20 as
     mandated by IEEE Std 1619-2018.
     [Paul Dale]

  *) Added newline escaping functionality to a filename when using openssl dgst.
     This output format is to replicate the output format found in the '*sum'
     checksum programs. This aims to preserve backward compatibility.
     [Matt Eaton, Richard Levitte, and Paul Dale]

  *) Removed the heartbeat message in DTLS feature, as it has very
     little usage and doesn't seem to fulfill a valuable purpose.
     The configuration option is now deprecated.
     [Richard Levitte]

  *) Changed the output of 'openssl {digestname} < file' to display the
     digest name in its output.
     [Richard Levitte]

  *) Added a new generic trace API which provides support for enabling
     instrumentation through trace output. This feature is mainly intended